# cargo-spdx

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
src/: build.rs  cargo.rs  cli.rs  document.rs  flat_file.rs  git.rs  key_value.rs  main.rs  output.rs  spdx.rs
src/document/: mod.rs  schema.rs
src/format/: key_value.rs  mod.rs
