[package]
name = "cargo-spdx"
description = "Generate an SPDX SBOM for a crate."
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alilleybrinker/cargo-spdx"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["cli", "supply-chain", "sbom", "spdx", "cargo"]

[dependencies]
anyhow = "1.0.57"
cargo_metadata = "0.14.2"
