[package]
name = "cargo-spdx"
description = "Generate an SPDX SBOM for a crate."
version = "0.1.0"
edition = "2021"
rust-version = "1.61"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alilleybrinker/cargo-spdx"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["cli", "supply-chain", "sbom", "spdx", "cargo"]

[dependencies]
anyhow = "1.0.57"
cargo_metadata = "0.14.2"
clap = { version = "3.1.18", features = ["derive"] }
derive_builder = "0.11.2"
derive_more = "0.99.17"
dialoguer = "0.10.1"
env_logger = "0.9.0"
git2 = { version = "0.14.4", features = ["vendored-openssl", "vendored-libgit2"] }
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
time = { version = "0.3.9", features = ["formatting", "macros", "serde"] }
url = {version = "2.2.2", features = ["serde"]}
